--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
+    "@angular/cli": "1.6.3",
     "@angular/compiler-cli": "^5.1.3",
     "@angular/language-service": "^5.1.3",
     "@types/jasmine": "~2.5.53",
@@ -48,6 +48,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
+    "tslib": "^1.8.1",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
   }
