--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@angular/router": "^5.2.0",
     "@progress/kendo-angular-pdf-export": "^1.0.1",
     "@progress/kendo-drawing": "^1.4.0",
+    "@types/file-saver": "^1.3.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.5.2",
     "web-animations-js": "^2.3.1",
