--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.4.1",
     "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
+    "particles.js": "^2.0.0",
     "rxjs": "^5.5.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
