--- a/package.json
+++ b/package.json
@@ -12,48 +12,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/cdk": "^5.0.4",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/material": "^5.0.4",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "@progress/kendo-angular-pdf-export": "^1.0.1",
-    "@progress/kendo-drawing": "^1.4.0",
-    "@types/file-saver": "^1.3.0",
+    "@angular/animations": "^5.2.11",
+    "@angular/cdk": "^5.2.5",
+    "@angular/common": "^5.2.11",
+    "@angular/compiler": "^5.2.11",
+    "@angular/core": "^5.2.11",
+    "@angular/forms": "^5.2.11",
+    "@angular/http": "^5.2.11",
+    "@angular/material": "^5.2.5",
+    "@angular/platform-browser": "^5.2.11",
+    "@angular/platform-browser-dynamic": "^5.2.11",
+    "@angular/router": "^5.2.11",
+    "@progress/kendo-angular-pdf-export": "^1.3.1",
+    "@progress/kendo-drawing": "^1.5.12",
+    "@types/file-saver": "^1.3.1",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.4.1",
-    "file-saver": "^1.3.3",
+    "core-js": "^2.6.9",
+    "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "particles.js": "^2.0.0",
-    "rxjs": "^5.5.2",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.14"
+    "rxjs": "^5.5.12",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.4",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
+    "@angular/cli": "^1.6.4",
+    "@angular/compiler-cli": "^5.2.11",
+    "@angular/language-service": "^5.2.11",
     "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/jasminewd2": "^2.0.7",
+    "@types/node": "^6.0.118",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslib": "^1.8.1",
+    "tslib": "^1.10.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
   }
